tests/mm0_mmu/fail/bad-sort4321.mmu
-- bad modifier order
(sort s4321 free provable strict pure)